--- a/api/.env.example
+++ b/api/.env.example
@@ -5,5 +5,8 @@ DB_NAME = "YOUR DATABASENAME"
 
 JWT_KEY = "secret key"
 HEADERS_SECRET = ""
-REDIS_KEY=""
 PORT = 8000
+
+
+SendGridApiKey = ""
+hostURL = http://localhost:8000
